--- a/Full Stack Project/portfoliostyle.css
+++ b/Full Stack Project/portfoliostyle.css
@@ -219,7 +219,7 @@ footer {
   position: relative;
   text-align: center;
   padding: 100px 20px;
-  background-color: rgba(0, 0, 0, 0.8); /* semi-transparent background for readability */
+  
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   
@@ -272,6 +272,7 @@ footer {
   background-color: rgba(221, 218, 218, 0.8);
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 0 auto 50px;
 }
 
 .items {
